[] Fixed problem with viewing a shortcut in read-only mode - thanks to
gillum for reporting and helping track this down.
[] Fix crash error using External Editor on Notes field.
[] Password Verification field not set when editing/viewing an alias entry
and the password is hidden.
[] Enter key again works in initial dialog if user uses browse button to
select a database to open.

New Features for 3.18.1
=======================
[] Add new AutoType special fields '\wnnn' and '\Wnnn'. Unlike '\d', which
sets the delay between sending each subsequent character, '\w' & '\W' introduces
a one-time delay where they appear.  For '\w', the value 'nnn' is in
milli-seconds. For '\W', this specifies seconds. Note: Max. value is
999s (16m 39s), during which time PasswordSafe will be unresponsive
while it waits the specified time.

New Features for 3.18
=====================
[] Add minidump support for release builds so that we can try to solve
issues with more information than Windows normally provides.

New Features for 3.18
=====================
[2793283] Allow entry to override doubleclick setting.
[2793280] Browse+Autotype added to configurable double click actions.
[] Implement Virtual Keyboards for multilingual passphrase entry.
[] DragBar now has ToolTips to inform user of its use.
[] User can close the currently open database via the System Tray
menu.
[] Improved Merge reporting.

Changes to Existing Features in 3.18
====================================
[] New toolbar icon set has been replaced with icons based on famfamfam's
silk set.
[] Reworked Add and Edit dialogs into Property Pages.

Bugs fixed in 3.18
==================
[2795428] Browse+ on Toolbar now inactive if no URL present
[2795427] Duplicate of "Display Subset of Password" removed from Context
Menu (right-click on entry).
[2789873] Status bar now updated properly after Browse to URL and other
actions that copied data to the clipboard.
[2782413] No longer crashes when loading 0302 formatted headers (from